# nxp-cup

./: .gitignore  readme.md  west.yml
projects/nxp-cup/: CMakeLists.txt  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
projects/nxp-cup/src/: ble.c  ble.h  main.c  motor.c  motor.h
projects/nxp_cup/: CMakeLists.txt  prj.conf
